Safari and mobile issue where overflow: auto was not acccepted, so I changed it to overflow-x: hidden and this appears to resolve the issue

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ p{
     margin-bottom: 20px;
 }
 .site-container {
-    overflow: auto;
+    overflow-x: hidden;
 }
 #main-content{
     margin: 0 auto;
